compiler/testData/diagnostics/tests/annotations/arrayLiteralFalseNegativeInsideLambda.kt
inline fun build(action: () -> Unit) {}

fun foo(x: Int) = build {
    if (x == 1) <!UNSUPPORTED!>[1]<!>
}
